--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ nav {
     height: 100px; 
 }
 
-#nalini-logo {
-    width: 20px; 
-    height: 20px;
+#Nalini-logo {
+    width: 75px; 
+    height: 75px;
 }
 
 .nav__link--list {
@@ -39,6 +39,12 @@ nav {
 }
 
 nav__link {
-    
+    margin: 0 12px;
 }
 
+.nav__link--anchor {
+    text-decoration: none;
+    font-size: 16px;
+    color: #242424;
+    font-weight: 700;
+}
