--- a/style.css
+++ b/style.css
@@ -12,6 +12,78 @@ li {
     list-style-type: none;
 }
 
+p {
+    line-height: 1.5; 
+    font-size: 16px; 
+}
+
+a {
+    text-decoration: none; 
+}
+
+
+section {
+background-color: rgb(245, 245, 245);
+}
+
+.click {
+    transition: all 300ms ease; 
+}
+
+.click:hover {
+    transform: scale (0.8);
+}
+
+.title {
+    font-size: 120px; 
+    margin-bottom: 12px; 
+    text-align: left; 
+    line-height: 1; 
+}
+
+.title-secondary {
+    color: rgb(69, 114, 228); 
+    font-weight: 900;
+}
+
+
+
+/* 
+
+LANDING PAGE 
+
+*/
+
+#landing-page {
+    min-height: 100vh;
+}
+
+.header {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    max-width: 1000px;
+    padding: 0 30px; 
+}
+
+.header__para {
+    font-size: 24px; 
+    line-height: 2; 
+    max-width: 450px; 
+}
+
+.text-blue {
+    color: rgb(69, 114, 228); 
+    font-weight: 900;
+}
+
+.title-secondary {
+    color: rgb(69, 114, 228); 
+    font-weight: 900;
+}
+
 
 /* 
 
@@ -27,6 +99,7 @@ nav {
     max-width: 1200px;
     margin: 0 auto;
     height: 100px; 
+    padding: 0 20px; 
 }
 
 #Nalini-logo {
@@ -38,8 +111,8 @@ nav {
     display: flex;
 }
 
-nav__link {
-    margin: 0 12px;
+.nav__link {
+    margin: 15px 12px;
 }
 
 .nav__link--anchor {
@@ -47,4 +120,30 @@ nav__link {
     font-size: 16px;
     color: #242424;
     font-weight: 700;
+}
+
+.fa-solid {
+    font-size: 20px;
+}
+
+.social__list {
+    color:rgb(69, 114, 228);
+    text-decoration: none; 
+    margin-top: 16px; 
+    display: flex;
+}
+
+.social__link {
+    background-color: rgb(69, 114, 228);
+    color: white; 
+    padding: 6px; 
+    width: 32px; 
+    height: 32px; 
+    font-size: 14px; 
+    margin-right: 12px; 
+    text-align: center;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    border-radius: 50%; 
 }
