--- a/style.css
+++ b/style.css
@@ -1,52 +1,64 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
-    color: black; 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+  color: black;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 p {
-    line-height: 1.5; 
-    font-size: 16px; 
+  line-height: 1.5;
+  font-size: 16px;
 }
 
 a {
-    text-decoration: none; 
+  text-decoration: none;
 }
 
+button {
+  cursor: pointer;
+}
 
 section {
-background-color: rgb(245, 245, 245);
+  background-color: rgb(245, 245, 245);
+}
+
+.container {
+    padding: 50px 0px;
+}
+
+.row {
+    width: 100%;
+    max-width: 1100px; 
+    margin: 0 auto; 
+    padding: 0 12px; 
 }
 
 .click {
-    transition: all 300ms ease; 
+  transition: all 300ms ease;
 }
 
 .click:hover {
-    transform: scale (0.8);
+  transform: scale (0.8);
 }
 
 .title {
-    font-size: 120px; 
-    margin-bottom: 12px; 
-    text-align: left; 
-    line-height: 1; 
+  font-size: 120px;
+  margin-bottom: 12px;
+  text-align: left;
+  line-height: 1;
 }
 
 .title-secondary {
-    color: rgb(69, 114, 228); 
-    font-weight: 900;
+  color: rgb(69, 114, 228);
+  font-weight: 900;
 }
-
-
 
 /* 
 
@@ -55,35 +67,83 @@ LANDING PAGE
 */
 
 #landing-page {
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 .header {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    max-width: 1000px;
-    padding: 0 30px; 
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 1000px;
+  padding: 0 30px;
 }
 
 .header__para {
-    font-size: 24px; 
-    line-height: 2; 
-    max-width: 450px; 
+  font-size: 24px;
+  line-height: 2;
+  max-width: 450px;
 }
 
 .text-blue {
-    color: rgb(69, 114, 228); 
-    font-weight: 900;
+  color: rgb(69, 114, 228);
+  font-weight: 900;
 }
 
 .title-secondary {
-    color: rgb(69, 114, 228); 
-    font-weight: 900;
+  color: rgb(69, 114, 228);
+  font-weight: 900;
 }
 
+.mail__btn {
+  width: 70px;
+  height: 70px;
+  font-size: 32px;
+  border-radius: 50%;
+  border: none;
+  background-color: rgb(69, 114, 228);
+  color: white;
+  position: absolute;
+  bottom: 32px;
+  right: 40px;
+}
+
+.scroll {
+  position: absolute;
+  bottom: 20px;
+}
+
+.scroll__icon {
+  width: 20px;
+  height: 20px;
+  border: 2px solid #242424;
+  border-radius: 24px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.scroll__icon:after {
+  content: "";
+  width: 4px;
+  height: 6px;
+  background-color: #242424;
+  border-radius: 2px;
+  animation: scroll 1000ms infinite alternate-reverse;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateY(3px);
+  }
+
+  100% {
+    transform: translateY(-3px);
+  }
+}
 
 /* 
 
@@ -92,58 +152,103 @@ NAVIGATION
 */
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    height: 100px; 
-    padding: 0 20px; 
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  height: 100px;
+  padding: 0 20px;
 }
 
 #Nalini-logo {
-    width: 75px; 
-    height: 75px;
+  width: 75px;
+  height: 75px;
 }
 
 .nav__link--list {
-    display: flex;
+  display: flex;
 }
 
 .nav__link {
-    margin: 15px 12px;
+  margin: 15px 12px;
 }
 
 .nav__link--anchor {
-    text-decoration: none;
-    font-size: 16px;
-    color: #242424;
-    font-weight: 700;
+  text-decoration: none;
+  font-size: 16px;
+  color: #242424;
+  font-weight: 700;
 }
 
 .fa-solid {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .social__list {
-    color:rgb(69, 114, 228);
-    text-decoration: none; 
-    margin-top: 16px; 
-    display: flex;
+  color: rgb(69, 114, 228);
+  text-decoration: none;
+  margin-top: 16px;
+  display: flex;
 }
 
 .social__link {
-    background-color: rgb(69, 114, 228);
-    color: white; 
-    padding: 6px; 
-    width: 32px; 
-    height: 32px; 
-    font-size: 14px; 
-    margin-right: 12px; 
+  background-color: rgb(69, 114, 228);
+  color: white;
+  padding: 6px;
+  width: 32px;
+  height: 32px;
+  font-size: 14px;
+  margin-right: 12px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+
+/* 
+
+PROJECTS
+
+*/
+
+.section__title {
     text-align: center;
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-    border-radius: 50%; 
+    font-size: 48px; 
+    margin-bottom: 60px; 
+}
+
+.project__img {
+    width: 100%;
+
+}
+
+.project__wrapper {
+    position: relative; 
+    border-radius: 20px; 
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+    overflow: hidden;
+}
+
+
+.position__description {
+    position: absolute; 
+    top: 50%;
+    left: 90px; 
+    transform: translateY(-50%);
+    color: rgb(69, 114, 228);
+    max-width: 550px; 
+}
+
+.project__wrapper--bg {
+    position: absolute; 
+    top: 0;
+    left: 0; 
+    height: 100%; 
+    width: 100%; 
+    background-color: #1c1d25; 
+    opacity: 0.7;
 }
