--- a/style.css
+++ b/style.css
@@ -29,23 +29,61 @@ section {
   background-color: rgb(245, 245, 245);
 }
 
+.input, textarea {
+    width: 100%; 
+    background-color: rgb(69, 114, 228);
+    color: white; 
+    outline: none; 
+    border: 3px solid #c0c4cc;
+    border-top: none;
+    border-left: none; 
+    border-right: none; 
+    height: 40px; 
+    transition: all 300ms ease; 
+}
+
+.textarea {
+    resize: vertical; 
+    height: 100px; 
+    margin-top: 6px; 
+}
+
+.label {
+    font-size: 14px; 
+    font-weight: bold;
+}
+
+input:hover, textarea:hover {
+    border-color: #dcdfe6;  
+}
+
+input:focus, textarea:focus {
+    background-color: rgb(69, 114, 228);
+}
+
 .container {
-    padding: 50px 0px;
+  padding: 50px 0px;
+  width: 100%;
 }
 
 .row {
-    width: 100%;
-    max-width: 1100px; 
-    margin: 0 auto; 
-    padding: 0 12px; 
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 12px;
 }
 
 .click {
   transition: all 300ms ease;
+  cursor: pointer; 
 }
 
 .click:hover {
   transform: scale (0.8);
+}
+
+.click:active {
+  transform: scale(0.8);
 }
 
 .title {
@@ -58,6 +96,34 @@ section {
 .title-secondary {
   color: rgb(69, 114, 228);
   font-weight: 900;
+}
+
+.link__hover-effect {
+  position: relative;
+}
+
+.link__hover-effect:after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  height: 3px;
+  width: 0;
+  right: 0;
+  background-color: black;
+  transition: all 300ms ease;
+}
+
+.link__hover-effect:hover:after {
+  left: 0;
+  width: 100%;
+}
+
+.link__hover-effect--white:after {
+  background-color: white;
+}
+
+.link__hover-effect--black:after {
+  background-color: #242424;
 }
 
 /* 
@@ -208,6 +274,175 @@ nav {
   border-radius: 50%;
 }
 
+/* 
+
+MODAL 
+
+*/
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  max-width: 1100px;
+  height: 500px;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+  border-radius: 20px;
+  overflow: hidden;
+  display: flex;
+}
+
+.modal__half {
+  width: 50%;
+  padding: 40px 72px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.modal__about {
+  background-color: rgb(245, 245, 245);
+
+}
+
+.modal__contact {
+  background-color: rgb(69, 114, 228);
+  color: white;
+}
+
+.modal__languages {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.modal__language {
+  width: 25%;
+  padding: 16px;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  transition: all 300ms ease;
+}
+
+.modal__language:hover .language__name {
+  transform: scale(1);
+}
+
+.modal__language:hover {
+  filter: brightness(80%);
+  transform: scale(0.9);
+}
+
+/* 
+in lesson David has position: absolute 
+but that doesn't work for me */
+.language__name {
+  position: relative;
+  bottom: -10px;
+  transform: scale(0);
+  transition: all 300ms ease;
+}
+
+.modal__language--img {
+  width: 100%;
+}
+
+.modal__sub-title {
+  font-size: 14px;
+  margin: 12px 0px 24px 0;
+}
+
+.modal__title {
+  color: rgb(69, 114, 228);
+  font-size: 26px;
+  margin: 36px 0px 4px 0;
+}
+
+.modal__para {
+  margin-bottom: 12px;
+  line-height: 1.75;
+}
+
+.form__item {
+    margin-bottom: 20px; 
+}
+
+.form__submit {
+    background-color: rgb(69, 114, 228);
+    border: 2px solid rgb(69, 114, 228); 
+    color: white; 
+    font-weight: bold; 
+    max-width: 240px;
+    width: 100%; 
+    padding: 12px 24px; 
+    font-size: 20px; 
+    transition: all 300ms ease; 
+}
+
+.form__submit:hover {
+    border-color: white; 
+    background-color: transparent;
+}
+
+/* 
+COME BACK TO THIS ONCE YOU CAN SEE THE CODE CORRECTLY */
+.form__submit:active {
+    background-color: rgb(69, 114, 228);
+    color: white; 
+}
+
+.modal__overlay {
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal__overlay--loading {
+    background-color: rgb(69, 114, 228);
+    font-size: 80px; 
+    z-index: -1;
+}
+
+.modal__overlay--success {
+    background-color: rgb(166, 198, 178);
+    color: rgb(69, 114, 228);
+    font-size: 40px; 
+    font-weight: 700;
+    text-align: center;
+    padding: 28px; 
+}
+
+/* HOW YOU CREATE THE SPINNER FOR WHEN FORM IS SUBMITTED */
+
+.fa-spinner {
+    animation: spinner 750ms infinite linear; 
+}
+
+@keyframes spinner {
+    0% {
+        transform: rotate(0);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.modal__exit {
+    position: absolute; 
+    top: 30px; 
+    right: 40px; 
+    color: white; 
+    font-size: 36px; 
+    z-index: 100; 
+}
 
 /* 
 
@@ -216,76 +451,121 @@ PROJECTS
 */
 
 .section__title {
-    text-align: center;
-    font-size: 48px; 
-    margin-bottom: 60px; 
+  text-align: center;
+  font-size: 48px;
+  margin-bottom: 60px;
 }
 
 .project__img {
-    width: 100%;
+  width: 100%;
+  transition: all 600ms ease;
+}
 
+.project:hover .project__img {
+  transform: scale(1.07);
+  filter: blur(5px);
 }
 
 .project__wrapper {
-    position: relative; 
-    border-radius: 20px; 
-    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
-    overflow: hidden;
+  position: relative;
+  border-radius: 20px;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+  overflow: hidden;
 }
 
 .project__wrapper:hover .project__description {
-    opacity: 0.7;
-    transform: translateY(-50%);
+  opacity: 0.7;
+  transform: translateY(-50%);
 }
 
 .project__wrapper:hover .project__img {
-    transform: scale(1.07); 
-    filter: blur(5px);
+  transform: scale(1.07);
+  filter: blur(5px);
 }
 
 .project__wrapper:hover .project__wrapper--bg {
-    opacity: 0.7; 
-    visibility: visible;
+  opacity: 0.7;
+  visibility: visible;
 }
 
-
 .project__description {
-    position: absolute; 
-    top: 50%;
-    left: 90px; 
-    transform: translateY(100%);
-    opacity: 0;
-    transition: opacity 300ms, transform 450ms ease; 
-    color: rgb(69, 114, 228);
-    max-width: 550px; 
+  position: absolute;
+  top: 50%;
+  left: 90px;
+  transform: translateY(100%);
+  opacity: 0;
+  transition: opacity 300ms, transform 450ms ease;
+  color: rgb(69, 114, 228);
+  max-width: 550px;
 }
 
 .project__wrapper--bg {
-    position: absolute; 
-    top: 0;
-    left: 0; 
-    height: 100%; 
-    width: 100%; 
-    background-color: #1c1d25; 
-    opacity: 0;
-    transition: all 450ms ease; 
-    visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #1c1d25;
+  opacity: 0;
+  transition: all 450ms ease;
+  visibility: hidden;
 }
 
 .project__description--title {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 .project__description--sub-title {
-    margin-top: 8px; 
+  margin-top: 8px;
 }
 
 .project__description--link {
-    color: white; 
-    font-size: 20px; 
-    margin-right: 16px; 
+  color: white;
+  font-size: 20px;
+  margin-right: 16px;
 }
 
 .project__description--para {
-    margin: 16px 0;
+  margin: 16px 0;
+}
+
+/* 
+
+FOOTER 
+
+*/
+
+footer {
+  background-color: #242424;
+  display: flex;
+  padding: 6% 0;
+}
+
+.footer__row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__logo--img {
+  width: 70px;
+  display: flex;
+  align-items: center;
+}
+
+.footer__social--list {
+  width: 100%;
+  display: flex;
+  max-width: 500px;
+  justify-content: space-around;
+  align-items: center;
+  margin: 28px 0px;
+}
+
+.footer__social--link,
+.footer__copyright {
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
