--- a/style.css
+++ b/style.css
@@ -29,40 +29,45 @@ section {
   background-color: rgb(245, 245, 245);
 }
 
-.input, textarea {
-    width: 100%; 
-    background-color: rgb(69, 114, 228);
-    color: white; 
-    outline: none; 
-    border: 3px solid #c0c4cc;
-    border-top: none;
-    border-left: none; 
-    border-right: none; 
-    height: 40px; 
-    transition: all 300ms ease; 
+.input,
+textarea {
+  width: 100%;
+  background-color: rgb(69, 114, 228);
+  color: white;
+  outline: none;
+  border: 3px solid #c0c4cc;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  height: 40px;
+  transition: all 300ms ease;
 }
 
 .textarea {
-    resize: vertical; 
-    height: 100px; 
-    margin-top: 6px; 
+  resize: vertical;
+  height: 100px;
+  margin-top: 6px;
 }
 
 .label {
-    font-size: 14px; 
-    font-weight: bold;
+  font-size: 14px;
+  font-weight: bold;
 }
 
-input:hover, textarea:hover {
-    border-color: #dcdfe6;  
+input:hover,
+textarea:hover {
+  border-color: #dcdfe6;
 }
 
-input:focus, textarea:focus {
-    background-color: rgb(69, 114, 228);
+input:focus,
+textarea:focus {
+  background-color: rgb(69, 114, 228);
 }
 
 .modal--open {
-    z-index: 60; 
+  z-index: 60;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+  visibility: visible; 
 }
 
 .container {
@@ -79,7 +84,7 @@ input:focus, textarea:focus {
 
 .click {
   transition: all 300ms ease;
-  cursor: pointer; 
+  cursor: pointer;
 }
 
 .click:hover {
@@ -292,10 +297,10 @@ MODAL
   width: 90%;
   max-width: 1100px;
   height: 500px;
-  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
   border-radius: 20px;
   overflow: hidden;
   display: flex;
+  visibility: hidden; 
 }
 
 .modal__half {
@@ -308,7 +313,6 @@ MODAL
 
 .modal__about {
   background-color: rgb(245, 245, 245);
-
 }
 
 .modal__contact {
@@ -370,89 +374,88 @@ but that doesn't work for me */
 }
 
 .form__item {
-    margin-bottom: 20px; 
+  margin-bottom: 20px;
 }
 
 .form__submit {
-    background-color: rgb(69, 114, 228);
-    border: 2px solid rgb(69, 114, 228); 
-    color: white; 
-    font-weight: bold; 
-    max-width: 240px;
-    width: 100%; 
-    padding: 12px 24px; 
-    font-size: 20px; 
-    transition: all 300ms ease; 
+  background-color: rgb(69, 114, 228);
+  border: 2px solid rgb(69, 114, 228);
+  color: white;
+  font-weight: bold;
+  max-width: 240px;
+  width: 100%;
+  padding: 12px 24px;
+  font-size: 20px;
+  transition: all 300ms ease;
 }
 
 .form__submit:hover {
-    border-color: white; 
-    background-color: transparent;
+  border-color: white;
+  background-color: transparent;
 }
 
 /* 
 COME BACK TO THIS ONCE YOU CAN SEE THE CODE CORRECTLY */
 .form__submit:active {
-    background-color: rgb(69, 114, 228);
-    color: white; 
+  background-color: rgb(69, 114, 228);
+  color: white;
 }
 
 .modal__overlay {
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-    width: 100%; 
-    height: 100%; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: -1; 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
 }
 
 .modal__overlay--loading {
-    background-color: rgb(69, 114, 228);
-    font-size: 80px; 
-    /* z-index: -1; */
+  background-color: rgb(69, 114, 228);
+  font-size: 80px;
+  /* z-index: -1; */
 }
 
 .modal__overlay--success {
-    background-color: rgb(166, 198, 178);
-    color: rgb(69, 114, 228);
-    font-size: 40px; 
-    font-weight: 700;
-    text-align: center;
-    padding: 28px; 
-    /* z-index: -1;  */
+  background-color: rgb(166, 198, 178);
+  color: rgb(69, 114, 228);
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
+  padding: 28px;
+  /* z-index: -1;  */
 }
 
-
 .modal__overlay--visible {
-    z-index: 1; 
+  z-index: 1;
 }
 
 /* HOW YOU CREATE THE SPINNER FOR WHEN FORM IS SUBMITTED */
 
 .fa-spinner {
-    animation: spinner 750ms infinite linear; 
+  animation: spinner 750ms infinite linear;
 }
 
 @keyframes spinner {
-    0% {
-        transform: rotate(0);
-    }
+  0% {
+    transform: rotate(0);
+  }
 
-    100% {
-        transform: rotate(360deg);
-    }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .modal__exit {
-    position: absolute; 
-    top: 30px; 
-    right: 40px; 
-    color: white; 
-    font-size: 36px; 
-    z-index: 100; 
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  color: white;
+  font-size: 36px;
+  z-index: 100;
 }
 
 /* 
