--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ button {
 
 section {
   background-color: rgb(245, 245, 245);
+  transition: all 300ms ease; 
 }
 
 .input,
@@ -62,12 +63,6 @@ textarea:hover {
 input:focus,
 textarea:focus {
   background-color: rgb(69, 114, 228);
-}
-
-.modal--open {
-  z-index: 60;
-  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
-  visibility: visible; 
 }
 
 .container {
@@ -134,6 +129,76 @@ textarea:focus {
 .link__hover-effect--black:after {
   background-color: #242424;
 }
+
+/* FADE MODAL IN */
+nav,
+.scroll,
+.header {
+    opacity: 1;
+    visibility: visible; 
+    transition: all 600ms 800ms; 
+}
+/* 
+FADE MODAL OUT */
+.modal--open nav,
+.modal--open .scroll,
+.modal--open .header {
+    opacity: 1; 
+    visibility: hidden; 
+    transition: all 400ms; 
+}
+
+
+/* DARK THEME
+
+NEED TO TARGET EVERY SINGLE CLASS THAT YOU WANT CHANGING
+COLOR, IN ORDER FOR THE DARK THEME TO SWITCH BETWEEN LIGHT
+AND DARK COLORS  */
+
+.dark-theme .title, 
+.dark-theme .section__title, 
+.dark-theme .section__sub-title, 
+.dark-theme .nav__link--anchor, 
+.dark-theme .fa-solid, 
+.dark-theme .header__para
+{
+    color: white; 
+}
+
+/* THIS MAKES THE WHOLE SITE DARK */
+.dark-theme section {
+    background-color: #242424;
+}
+
+
+/* THIS MAKES LOGO WHITE */
+.dark-theme #Nalini-logo {
+    filter: none; 
+}
+
+
+/* SCROLL ICON MADE DARK  */
+.dark-theme .scroll__icon {
+    border-color: white; 
+}
+
+
+/* ICON MADE DARK TO LIGHT   */
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after {
+    background-color: white;
+}
+
+/* ICON MADE LIGHT TO DARK  */
+.dark-theme .link__hover-effect--white:after {
+    background-color: #242424;
+}
+
+.dark-theme .mail__btn {
+    background-color: white;
+    color: #242424; 
+}
+
 
 /* 
 
@@ -301,7 +366,16 @@ MODAL
   overflow: hidden;
   display: flex;
   visibility: hidden; 
+  z-index: -1; 
+  transition: visibility 1s, z-index 1s, box-shadow 0.5 ease;
 }
+
+.modal--open .modal {
+    z-index: 60;
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+    visibility: visible; 
+}
+  
 
 .modal__half {
   width: 50%;
@@ -309,15 +383,27 @@ MODAL
   display: flex;
   flex-direction: column;
   justify-content: center;
+  transition: all 300ms ease-in; 
 }
-
+/* 
+WHEN MODAL IS OPEN ITS TRANSLATED BACK TO ORIGINAL VALUE */
+.modal--open .modal__about,
+.modal--open .modal__contact 
+{
+    transform: translateX(0%);
+}
+/* 
+TRANSLATE MAKES THE CONTACT FORM SLIDE IN */
 .modal__about {
   background-color: rgb(245, 245, 245);
+  transform: translateX(-110%);
 }
-
+/* 
+NOW MODAL SLIDES IN FROM THE RIGHT - CONTACT SIDE IS ON RIGHT */
 .modal__contact {
   background-color: rgb(69, 114, 228);
   color: white;
+  transform: translateX(110%);  
 }
 
 .modal__languages {
@@ -407,7 +493,7 @@ COME BACK TO THIS ONCE YOU CAN SEE THE CODE CORRECTLY */
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   z-index: -1;
@@ -431,6 +517,7 @@ COME BACK TO THIS ONCE YOU CAN SEE THE CODE CORRECTLY */
 
 .modal__overlay--visible {
   z-index: 1;
+  display: flex;
 }
 
 /* HOW YOU CREATE THE SPINNER FOR WHEN FORM IS SUBMITTED */
@@ -582,4 +669,84 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+
+/* 
+
+SHAPES 
+
+ shapes on the first row 
+  height = 15vh
+  
+  shapes on the second row 
+  height = 50vh
+  
+  shapes on the third row 
+  height = 80vh
+
+  shapes on the first column
+  width = 5vw
+  
+  shapes on the second column
+  width = 50vw
+
+  shapes on the third column
+  width = 80vw
+
+*/
+
+/* 
+we need them to stay in one spot when we scroll, 
+this code does this */
+.shape {
+    position: fixed; 
+}
+
+/* this is applying the shapes in their locations */
+.shape--0 {
+    top: 15vh; 
+    left: 5vw;
+}
+
+
+.shape--1 {
+    top: 15vh; 
+    left: 50vw;
+}
+
+
+.shape--2 {
+    top: 15vh; 
+    left: 80vw;
+}
+
+.shape--3 {
+    top: 50vh; 
+    left:5vw;
+}
+
+.shape--4 {
+    top: 50vh; 
+    left: 50vw;
+}
+
+.shape--5 {
+    top: 50vh; 
+    left: 80vw;
+}
+
+.shape--6 {
+    top: 80vh; 
+    left: 5vw;
+}
+
+.shape--7 {
+    top: 80vh; 
+    left: 50vw;
+}
+
+.shape--8 {
+    top: 80vh; 
+    left: 80vw;
 }
