--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
   font-family: "Roboto", sans-serif;
 }
 
+html { 
+    scroll-behavior: smooth;
+}
+
 li {
   list-style-type: none;
 }
@@ -244,9 +248,11 @@ LANDING PAGE
   border: none;
   background-color: rgb(69, 114, 228);
   color: white;
-  position: absolute;
+  position: fixed;
   bottom: 32px;
   right: 40px;
+  z-index: 100; 
+  box-shadow: 0 12px 30px 0 rgb(0, 0, 0, 0.28);
 }
 
 .scroll {
@@ -637,6 +643,7 @@ FOOTER
 */
 
 footer {
+  position: relative; 
   background-color: #242424;
   display: flex;
   padding: 6% 0;
@@ -671,6 +678,25 @@ footer {
   justify-content: center;
 }
 
+
+.footer__logo--popper {
+    position: absolute;
+    right: 0;
+    top: 16px;
+    font-weight: 700;
+    opacity: 0;
+    transition: all 300ms ease;
+    color: white;
+  }
+  
+  .footer__anchor {
+    position: relative;
+  }
+  
+  .footer__anchor:hover .footer__logo--popper {
+    transform: translateX(60px);
+    opacity: 1;
+  }
 
 /* 
 
@@ -750,3 +776,57 @@ this code does this */
     top: 80vh; 
     left: 80vw;
 }
+
+
+/* Small phones, tablets, large smart phones */
+
+
+@media (max-width: 768px) {
+    .title {
+      font-size: 80px;
+    }
+    .header__para {
+      font-size: 20px;
+    }
+    .modal {
+      top: 0;
+      left: 0;
+      transform: none;
+      height: auto;
+      width: 100%;
+      flex-direction: column-reverse;
+      border-radius: 0;
+    }
+    .modal__half {
+      width: 100%;
+    }
+}
+
+
+/* Small phones */
+@media (max-width: 480px) {
+    .title {
+      font-size: 52px;
+    }
+    .header__para {
+      font-size: 18px;
+    }
+    .nav__link:first-child {
+      display: none;
+    }
+    .project__description--para {
+      display: none;
+    }
+    .project__description {
+      left: 0;
+      padding: 0;
+      width: 100%;
+      text-align: center;
+    }
+    .project__description--sub-title {
+      margin-bottom: 8px;
+    }
+    .modal__half {
+      padding: 40px;
+    }
+  }
