--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
-  color: black;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -9,7 +8,7 @@
 }
 
 html { 
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 li {
@@ -51,7 +50,7 @@ textarea {
 .textarea {
   resize: vertical;
   height: 100px;
-  margin-top: 6px;
+  margin-top: 8px;
 }
 
 .label {
@@ -66,7 +65,7 @@ textarea:hover {
 
 input:focus,
 textarea:focus {
-  background-color: rgb(69, 114, 228);
+  border-color: rgb(69, 114, 228);
 }
 
 .container {
@@ -87,7 +86,7 @@ textarea:focus {
 }
 
 .click:hover {
-  transform: scale (0.8);
+  transform: scale (1.1);
 }
 
 .click:active {
@@ -117,7 +116,7 @@ textarea:focus {
   height: 3px;
   width: 0;
   right: 0;
-  background-color: black;
+  /* background-color: black; */
   transition: all 300ms ease;
 }
 
@@ -147,7 +146,7 @@ FADE MODAL OUT */
 .modal--open nav,
 .modal--open .scroll,
 .modal--open .header {
-    opacity: 1; 
+    opacity: 0; 
     visibility: hidden; 
     transition: all 400ms; 
 }
@@ -235,6 +234,8 @@ LANDING PAGE
   font-weight: 900;
 }
 
+
+
 .title-secondary {
   color: rgb(69, 114, 228);
   font-weight: 900;
@@ -258,6 +259,8 @@ LANDING PAGE
 .scroll {
   position: absolute;
   bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .scroll__icon {
@@ -266,7 +269,7 @@ LANDING PAGE
   border: 2px solid #242424;
   border-radius: 24px;
   left: 50%;
-  transform: translateX(-50%);
+  /* transform: translateX(-50%); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -318,7 +321,7 @@ nav {
 }
 
 .nav__link {
-  margin: 15px 12px;
+  margin: 18px 12px;
 }
 
 .nav__link--anchor {
@@ -390,6 +393,7 @@ MODAL
   flex-direction: column;
   justify-content: center;
   transition: all 300ms ease-in; 
+  position: relative; 
 }
 /* 
 WHEN MODAL IS OPEN ITS TRANSLATED BACK TO ORIGINAL VALUE */
@@ -404,13 +408,6 @@ TRANSLATE MAKES THE CONTACT FORM SLIDE IN */
   background-color: rgb(245, 245, 245);
   transform: translateX(-110%);
 }
-/* 
-NOW MODAL SLIDES IN FROM THE RIGHT - CONTACT SIDE IS ON RIGHT */
-.modal__contact {
-  background-color: rgb(69, 114, 228);
-  color: white;
-  transform: translateX(110%);  
-}
 
 .modal__languages {
   display: flex;
@@ -421,6 +418,7 @@ NOW MODAL SLIDES IN FROM THE RIGHT - CONTACT SIDE IS ON RIGHT */
   width: 25%;
   padding: 16px;
   position: relative;
+  display: flex;
   flex-direction: column;
   align-items: center;
   transition: all 300ms ease;
@@ -449,6 +447,15 @@ but that doesn't work for me */
   width: 100%;
 }
 
+/* 
+NOW MODAL SLIDES IN FROM THE RIGHT - CONTACT SIDE IS ON RIGHT */
+.modal__contact {
+    background-color: rgb(69, 114, 228);
+    color: white;
+    transform: translateX(110%);  
+  }
+
+
 .modal__sub-title {
   font-size: 14px;
   margin: 12px 0px 24px 0;
@@ -473,7 +480,7 @@ but that doesn't work for me */
   background-color: rgb(69, 114, 228);
   border: 2px solid rgb(69, 114, 228);
   color: white;
-  font-weight: bold;
+  font-weight: 700;
   max-width: 240px;
   width: 100%;
   padding: 12px 24px;
@@ -576,12 +583,13 @@ PROJECTS
 .project__wrapper {
   position: relative;
   border-radius: 20px;
+  margin-bottom: 76px;
   box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
   overflow: hidden;
 }
 
 .project__wrapper:hover .project__description {
-  opacity: 0.7;
+  opacity: 1;
   transform: translateY(-50%);
 }
 
@@ -657,8 +665,8 @@ footer {
 
 .footer__logo--img {
   width: 70px;
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
 }
 
 .footer__social--list {
@@ -671,6 +679,7 @@ footer {
 }
 
 .footer__social--link,
+.footer__social--link2,
 .footer__copyright {
   color: white;
   display: flex;
