--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   font-family: "Roboto", sans-serif;
 }
 
-html { 
+html {
   scroll-behavior: smooth;
 }
 
@@ -22,6 +22,10 @@ p {
 
 a {
   text-decoration: none;
+  color: white; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 button {
@@ -30,7 +34,7 @@ button {
 
 section {
   background-color: rgb(245, 245, 245);
-  transition: all 300ms ease; 
+  transition: all 300ms ease;
 }
 
 .input,
@@ -137,20 +141,19 @@ textarea:focus {
 nav,
 .scroll,
 .header {
-    opacity: 1;
-    visibility: visible; 
-    transition: all 600ms 800ms; 
+  opacity: 1;
+  visibility: visible;
+  transition: all 600ms 800ms;
 }
 /* 
 FADE MODAL OUT */
 .modal--open nav,
 .modal--open .scroll,
 .modal--open .header {
-    opacity: 0; 
-    visibility: hidden; 
-    transition: all 400ms; 
+  opacity: 0;
+  visibility: hidden;
+  transition: all 400ms;
 }
-
 
 /* DARK THEME
 
@@ -158,50 +161,45 @@ NEED TO TARGET EVERY SINGLE CLASS THAT YOU WANT CHANGING
 COLOR, IN ORDER FOR THE DARK THEME TO SWITCH BETWEEN LIGHT
 AND DARK COLORS  */
 
-.dark-theme .title, 
-.dark-theme .section__title, 
-.dark-theme .section__sub-title, 
-.dark-theme .nav__link--anchor, 
-.dark-theme .fa-solid, 
-.dark-theme .header__para
-{
-    color: white; 
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-solid,
+.dark-theme .header__para {
+  color: white;
 }
 
 /* THIS MAKES THE WHOLE SITE DARK */
 .dark-theme section {
-    background-color: #242424;
+  background-color: #242424;
 }
-
 
 /* THIS MAKES LOGO WHITE */
 .dark-theme #Nalini-logo {
-    filter: none; 
+  filter: none;
 }
-
 
 /* SCROLL ICON MADE DARK  */
 .dark-theme .scroll__icon {
-    border-color: white; 
+  border-color: white;
 }
-
 
 /* ICON MADE DARK TO LIGHT   */
 .dark-theme .scroll__icon:after,
 .dark-theme .link__hover-effect--black:after {
-    background-color: white;
+  background-color: white;
 }
 
 /* ICON MADE LIGHT TO DARK  */
 .dark-theme .link__hover-effect--white:after {
-    background-color: #242424;
+  background-color: #242424;
 }
 
 .dark-theme .mail__btn {
-    background-color: white;
-    color: #242424; 
+  background-color: white;
+  color: #242424;
 }
-
 
 /* 
 
@@ -234,8 +232,6 @@ LANDING PAGE
   font-weight: 900;
 }
 
-
-
 .title-secondary {
   color: rgb(69, 114, 228);
   font-weight: 900;
@@ -252,7 +248,7 @@ LANDING PAGE
   position: fixed;
   bottom: 32px;
   right: 40px;
-  z-index: 100; 
+  z-index: 100;
   box-shadow: 0 12px 30px 0 rgb(0, 0, 0, 0.28);
 }
 
@@ -374,17 +370,16 @@ MODAL
   border-radius: 20px;
   overflow: hidden;
   display: flex;
-  visibility: hidden; 
-  z-index: -1; 
+  visibility: hidden;
+  z-index: -1;
   transition: visibility 1s, z-index 1s, box-shadow 0.5 ease;
 }
 
 .modal--open .modal {
-    z-index: 60;
-    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
-    visibility: visible; 
+  z-index: 60;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+  visibility: visible;
 }
-  
 
 .modal__half {
   width: 50%;
@@ -392,15 +387,14 @@ MODAL
   display: flex;
   flex-direction: column;
   justify-content: center;
-  transition: all 300ms ease-in; 
-  position: relative; 
+  transition: all 300ms ease-in;
+  position: relative;
 }
 /* 
 WHEN MODAL IS OPEN ITS TRANSLATED BACK TO ORIGINAL VALUE */
 .modal--open .modal__about,
-.modal--open .modal__contact 
-{
-    transform: translateX(0%);
+.modal--open .modal__contact {
+  transform: translateX(0%);
 }
 /* 
 TRANSLATE MAKES THE CONTACT FORM SLIDE IN */
@@ -450,11 +444,10 @@ but that doesn't work for me */
 /* 
 NOW MODAL SLIDES IN FROM THE RIGHT - CONTACT SIDE IS ON RIGHT */
 .modal__contact {
-    background-color: rgb(69, 114, 228);
-    color: white;
-    transform: translateX(110%);  
-  }
-
+  background-color: rgb(69, 114, 228);
+  color: white;
+  transform: translateX(110%);
+}
 
 .modal__sub-title {
   font-size: 14px;
@@ -656,7 +649,7 @@ FOOTER
 */
 
 footer {
-  position: relative; 
+  position: relative;
   background-color: #242424;
   display: flex;
   padding: 6% 0;
@@ -670,6 +663,7 @@ footer {
 
 .footer__logo--img {
   width: 70px;
+  margin-bottom: 72px;
   /* display: flex;
   align-items: center; */
 }
@@ -677,10 +671,9 @@ footer {
 .footer__social--list {
   width: 100%;
   display: flex;
-  max-width: 500px;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  margin: 28px 0px;
+  margin: 28px 48px 48px 48px;
 }
 
 .footer__social--link,
@@ -692,25 +685,24 @@ footer {
   justify-content: center;
 }
 
-
 .footer__logo--popper {
-    position: absolute;
-    right: 0;
-    top: 16px;
-    font-weight: 700;
-    opacity: 0;
-    transition: all 300ms ease;
-    color: white;
-  }
-  
-  .footer__anchor {
-    position: relative;
-  }
-  
-  .footer__anchor:hover .footer__logo--popper {
-    transform: translateX(60px);
-    opacity: 1;
-  }
+  position: absolute;
+  right: 0;
+  top: 16px;
+  font-weight: 700;
+  opacity: 0;
+  transition: all 300ms ease;
+  color: white;
+}
+
+.footer__anchor {
+  position: relative;
+}
+
+.footer__anchor:hover .footer__logo--popper {
+  transform: translateX(60px);
+  opacity: 1;
+}
 
 /* 
 
@@ -740,107 +732,102 @@ SHAPES
 we need them to stay in one spot when we scroll, 
 this code does this */
 .shape {
-    position: fixed; 
+  position: fixed;
 }
 
 /* this is applying the shapes in their locations */
 .shape--0 {
-    top: 15vh; 
-    left: 5vw;
+  top: 15vh;
+  left: 5vw;
 }
-
 
 .shape--1 {
-    top: 15vh; 
-    left: 50vw;
+  top: 15vh;
+  left: 50vw;
 }
 
-
 .shape--2 {
-    top: 15vh; 
-    left: 80vw;
+  top: 15vh;
+  left: 80vw;
 }
 
 .shape--3 {
-    top: 50vh; 
-    left:5vw;
+  top: 50vh;
+  left: 5vw;
 }
 
 .shape--4 {
-    top: 50vh; 
-    left: 50vw;
+  top: 50vh;
+  left: 50vw;
 }
 
 .shape--5 {
-    top: 50vh; 
-    left: 80vw;
+  top: 50vh;
+  left: 80vw;
 }
 
 .shape--6 {
-    top: 80vh; 
-    left: 5vw;
+  top: 80vh;
+  left: 5vw;
 }
 
 .shape--7 {
-    top: 80vh; 
-    left: 50vw;
+  top: 80vh;
+  left: 50vw;
 }
 
 .shape--8 {
-    top: 80vh; 
-    left: 80vw;
+  top: 80vh;
+  left: 80vw;
 }
-
 
 /* Small phones, tablets, large smart phones */
 
-
 @media (max-width: 768px) {
-    .title {
-      font-size: 80px;
-    }
-    .header__para {
-      font-size: 20px;
-    }
-    .modal {
-      top: 0;
-      left: 0;
-      transform: none;
-      height: auto;
-      width: 100%;
-      flex-direction: column-reverse;
-      border-radius: 0;
-    }
-    .modal__half {
-      width: 100%;
-    }
+  .title {
+    font-size: 80px;
+  }
+  .header__para {
+    font-size: 20px;
+  }
+  .modal {
+    top: 0;
+    left: 0;
+    transform: none;
+    height: auto;
+    width: 100%;
+    flex-direction: column-reverse;
+    border-radius: 0;
+  }
+  .modal__half {
+    width: 100%;
+  }
 }
-
 
 /* Small phones */
 @media (max-width: 480px) {
-    .title {
-      font-size: 52px;
-    }
-    .header__para {
-      font-size: 18px;
-    }
-    .nav__link:first-child {
-      display: none;
-    }
-    .project__description--para {
-      display: none;
-    }
-    .project__description {
-      left: 0;
-      padding: 0;
-      width: 100%;
-      text-align: center;
-    }
-    .project__description--sub-title {
-      margin-bottom: 8px;
-    }
-    .modal__half {
-      padding: 40px;
-    }
+  .title {
+    font-size: 52px;
   }
+  .header__para {
+    font-size: 18px;
+  }
+  .nav__link:first-child {
+    display: none;
+  }
+  .project__description--para {
+    display: none;
+  }
+  .project__description {
+    left: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+  }
+  .project__description--sub-title {
+    margin-bottom: 8px;
+  }
+  .modal__half {
+    padding: 40px;
+  }
+}
